// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-chip-delete default 1`] = `
<div
  class="m-chip-delete m--is-large"
>
  <div
    class="m-chip-delete__body"
  >
    <span
      class="m-chip-delete__text"
      id="mChipDeleteText-fakeId"
    >
      <span
        class="m-chip-delete__hidden-text"
      >
        Supprimer : 
      </span>
       Chip delete
    </span>
     
    <button
      aria-labelledby="mChipDeleteText-fakeId"
      class="m-chip-delete__button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-chip-delete__icon"
        height="14px"
        width="14px"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-chip-delete disabled 1`] = `
<div
  class="m-chip-delete m--is-large m--is-disabled"
>
  <div
    class="m-chip-delete__body"
  >
    <span
      class="m-chip-delete__text"
      id="mChipDeleteText-fakeId"
    >
      <span
        class="m-chip-delete__hidden-text"
      >
        Supprimer : 
      </span>
       Disabled
    </span>
     
    <button
      aria-labelledby="mChipDeleteText-fakeId"
      class="m-chip-delete__button"
      disabled="disabled"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-chip-delete__icon"
        height="14px"
        width="14px"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-chip-delete small 1`] = `
<div
  class="m-chip-delete m--is-small"
>
  <div
    class="m-chip-delete__body"
  >
    <span
      class="m-chip-delete__text"
      id="mChipDeleteText-fakeId"
    >
      <span
        class="m-chip-delete__hidden-text"
      >
        Supprimer : 
      </span>
       Chip delete
    </span>
     
    <button
      aria-labelledby="mChipDeleteText-fakeId"
      class="m-chip-delete__button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-chip-delete__icon"
        height="8px"
        width="8px"
      />
    </button>
  </div>
</div>
`;
